navbar link editing
메인 페이지 네비게이션 링크 변경

--- a/c1/index.html
+++ b/c1/index.html
@@ -115,11 +115,11 @@ $(function(){
         </a>
         <nav id="gnb">
             <ul>
-                <li><a href="intro.html">병원안내</a></li>
-                <li><a href="physical.html">재활치료</a></li>
-                <li><a href="ward.html">병동안내</a></li>
-                <li><a href="news.html">병원소식</a></li>
-                <li><a href="speech.html">치료연계안내</a></li>
+                <li><a href="intro.html#page1">병원안내</a></li>
+                <li><a href="physical.html#page1">재활치료</a></li>
+                <li><a href="ward.html#page1">병동안내</a></li>
+                <li><a href="news.html#page1">병원소식</a></li>
+                <li><a href="speech.html#page1">치료연계안내</a></li>
             </ul>
         </nav>
         <label for="ck" class="lstBtn">
@@ -136,12 +136,12 @@ $(function(){
         <input type="radio" name="raItem" id="ra2">
         <ul class="banBox">
             <li>
-                <a href="">
+                <a href="ward.html#page1">
                     <img src="./img/visual1.jpg" alt="병동안내 비주얼">
                 </a>
             </li>
             <li>
-                <a href="">
+                <a href="physical.html#page1">
                     <img src="./img/visual2.jpg" alt="도수치료 비주얼">
                 </a>
             </li>
@@ -328,7 +328,7 @@ $(function(){
         <ul class="item1">
             <li>
                 <h2>
-                    <a href="intro.html">병원안내</a>
+                    <a href="intro.html#page1">병원안내</a>
                 </h2>
             </li>
             <li>
@@ -353,7 +353,7 @@ $(function(){
         <ul class="item2">
             <li>
                 <h2>
-                    <a href="physical.html">재활치료</a>
+                    <a href="physical.html#page1">재활치료</a>
                 </h2>
             </li>
             <li>
@@ -369,7 +369,7 @@ $(function(){
         <ul class="item3">
             <li>
                 <h2>
-                    <a href="ward.html">병동안내</a>
+                    <a href="ward.html#page1">병동안내</a>
                 </h2>
             </li>
             <li>
@@ -388,7 +388,7 @@ $(function(){
         <ul class="item4">
             <li>
                 <h2>
-                    <a href="news.html">병원소식</a>
+                    <a href="news.html#page1">병원소식</a>
                 </h2>
             </li>
             <li>
@@ -407,7 +407,7 @@ $(function(){
         <ul class="item5">
             <li>
                 <h2>
-                    <a href="speech.html">치료연계센터</a>
+                    <a href="speech.html#page1">치료연계센터</a>
                 </h2>
             </li>
             <li>
