sub1 - intro page complete
인트로페이지 완성

--- a/c1/intro.html
+++ b/c1/intro.html
@@ -571,13 +571,209 @@ $(function(){
     <div class="page" id="page5">
         <a href="#page5" class="btn1 item5">비급여 안내</a>
         <div class="con">
-            <h1 class="pageTitle">비급여 안내</h1>          
+            <h1 class="pageTitle">비급여 안내</h1>
+            <div class="subBox" style="height: auto; border-top:1px solid #666;">
+                <h2 class="subTit" style="padding-bottom:20px;">기본항목</h2>
+                <table class="subTable2">
+                    <thead>
+                        <tr>
+                            <th class="col2">구분</th>
+                            <th class="col7">기본항목</th>
+                            <th class="col3">가격 (단위 : 원)</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="col2">검사</td>
+                            <td class="col7">초음파 검사 - 1 부위</td>
+                            <td class="col3">80,000</td>
+                        </tr>
+                        <tr>
+                            <td class="col2">검사</td>
+                            <td class="col7">초음파 검사 - 2 부위</td>
+                            <td class="col3">120,000</td>
+                        </tr>
+                        <tr>
+                            <td class="col2">검사</td>
+                            <td class="col7">초음파 검사 - 3 부위 이상</td>
+                            <td class="col3">160,000</td>
+                        </tr>
+                        <tr>
+                            <td class="col2">통증치료</td>
+                            <td class="col7">도수치료 - 10분</td>
+                            <td class="col3">30,000</td>
+                        </tr>
+                        <tr>
+                            <td class="col2">통증치료</td>
+                            <td class="col7">도수치료 - 40분</td>
+                            <td class="col3">80,000</td>
+                        </tr>
+                        <tr>
+                            <td class="col2">통증치료</td>
+                            <td class="col7">도수치료 - 80분</td>
+                            <td class="col3">160,000</td>
+                        </tr>
+                        <tr>
+                            <td class="col2">통증치료</td>
+                            <td class="col7">체외충격파 치료 - 1부위</td>
+                            <td class="col3">80,000</td>
+                        </tr>
+                        <tr>
+                            <td class="col2">통증치료</td>
+                            <td class="col7">체외충격파 치료 - 2부위</td>
+                            <td class="col3">120,000</td>
+                        </tr>
+                        <tr>
+                            <td class="col2">통증치료</td>
+                            <td class="col7">체외충격파 치료 - 3부위 이상</td>
+                            <td class="col3">160,000</td>
+                        </tr>
+                        <tr>
+                            <td class="col2">통증치료</td>
+                            <td class="col7">플라센텍스주</td>
+                            <td class="col3">100,000</td>
+                        </tr>
+                        <tr>
+                            <td class="col2">통증치료</td>
+                            <td class="col7">증식치료 (prolotherapy) - 사지관절부위</td>
+                            <td class="col3">50,000</td>
+                        </tr>
+                        <tr>
+                            <td class="col2">통증치료</td>
+                            <td class="col7">증식치료 (prolotherapy) - 척추관절부위</td>
+                            <td class="col3">100,000</td>
+                        </tr>
+                        <tr>
+                            <td class="col2">통증치료</td>
+                            <td class="col7">이온토포레시스</td>
+                            <td class="col3">15,000</td>
+                        </tr>
+                        <tr>
+                            <td class="col2">통증치료</td>
+                            <td class="col7">Hylase 150u</td>
+                            <td class="col3">27,000</td>
+                        </tr>
+                        <tr>
+                            <td class="col2">통증치료</td>
+                            <td class="col7">Hylase 1500u</td>
+                            <td class="col3">88,000</td>
+                        </tr>
+                    </tbody>
+                </table> 
+            </div>
+            <div class="subBox" style="height: auto;">
+                <h2 class="subTit" style="padding-bottom:20px;">제증명료</h2>
+                <table class="subTable2">
+                    <thead>
+                        <tr>
+                            <th class="col2">구분</th>
+                            <th class="col7">기본항목</th>
+                            <th class="col3">가격 (단위 : 원)</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="col2">제증명료</td>
+                            <td class="col7">일반진단서 - 원본</td>
+                            <td class="col3">20,000</td>
+                        </tr>
+                        <tr>
+                            <td class="col2">제증명료</td>
+                            <td class="col7">의사 소견서</td>
+                            <td class="col3">10,000</td>
+                        </tr>
+                        <tr>
+                            <td class="col2">제증명료</td>
+                            <td class="col7">소견서 (영문)</td>
+                            <td class="col3">20,000</td>
+                        </tr>
+                        <tr>
+                            <td class="col2">제증명료</td>
+                            <td class="col7">진단서 (영문)</td>
+                            <td class="col3">40,000</td>
+                        </tr>
+                        <tr>
+                            <td class="col2">제증명료</td>
+                            <td class="col7">의무기록사본복사 (기본 5장까지)</td>
+                            <td class="col3">2,000</td>
+                        </tr>
+                        <tr>
+                            <td class="col2">제증명료</td>
+                            <td class="col7">의무기록사본복사 (6매부터 추가 1장당)</td>
+                            <td class="col3">200</td>
+                        </tr>
+                        <tr>
+                            <td class="col2">제증명료</td>
+                            <td class="col7">CD 복사</td>
+                            <td class="col3">10,000</td>
+                        </tr>
+                        <tr>
+                            <td class="col2">제증명료</td>
+                            <td class="col7">입, 퇴원 확인서</td>
+                            <td class="col3">3,000</td>
+                        </tr>
+                        <tr>
+                            <td class="col2">제증명료</td>
+                            <td class="col7">진단확인서</td>
+                            <td class="col3">20,000</td>
+                        </tr>
+                    </tbody>
+                </table>    
+            </div>
+                     
+                       
         </div>
     </div>
     <div class="page" id="page6">
         <a href="#page6" class="btn1 item6">협력기관</a>
         <div class="con">
             <h1 class="pageTitle">협력기관</h1>
+            <div class="subBox" style="height:auto; ">
+                <ul class="linkLst">
+                    <li class="col3">
+                        <a href="https://www.brmh.org/home.do" target="_blank">
+                            <img src="./img/intro07_1.jpg" alt="이미지아이콘">
+                            <span class="linkTit">보라매병원</span>
+                        </a>
+                    </li>
+                    <li class="col3">
+                        <a href="http://ch.cauhs.or.kr/" target="_blank">
+                            <img src="./img/intro07_2.jpg" alt="이미지아이콘">
+                            <span class="linkTit">중앙대학교병원</span>
+                        </a>
+                    </li>
+                    <li class="col3">
+                        <a href="https://m.cmcseoul.or.kr/" target="_blank">
+                            <img src="./img/intro07_3.jpg" alt="이미지아이콘">
+                            <span class="linkTit">서울성모병원</span>
+                        </a>
+                    </li>
+                    <li class="col3">
+                        <a href="https://www.snubh.org/" target="_blank">
+                            <img src="./img/intro07_4.jpg" alt="이미지아이콘">
+                            <span class="linkTit">세브란스병원</span>
+                        </a>
+                    </li>
+                    <li class="col3">
+                        <a href="https://www.snubh.org/" target="_blank">
+                            <img src="./img/intro07_5.jpg" alt="이미지아이콘">
+                            <span class="linkTit">분당 서울대학교병원</span>
+                        </a>
+                    </li>
+                    <li class="col3">
+                        <a href="http://www.snuh.org/" target="_blank">
+                            <img src="./img/intro07_6.jpg" alt="이미지아이콘">
+                            <span class="linkTit">서울대학교병원</span>
+                        </a>
+                    </li>
+                    <li class="col3">
+                        <a href="http://bundang.chamc.co.kr/" target="_blank">
+                            <img src="./img/intro07_7.jpg" alt="이미지아이콘">
+                            <span class="linkTit">분당 차병원</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="page" id="lastPage">
