add to news page link
뉴스페이지 링크 추가

--- a/c1/news.html
+++ b/c1/news.html
@@ -142,36 +142,40 @@ $(function(){
                     </form>
                     <ul class="newsLst">
                         <li class="item1">
-                            <div class="col4">
-                                <img src="./img/news_notice_01.jpg" alt="사이트리뉴얼오픈" class="thumbNail">
-                            </div>
-                            <div class="col8">
-                                <h2 class="newsTitle">[서울/SRC병원 부설의원] SRC병원 부설의원 리뉴얼 오픈</h2>
-                                <p class="newsComent">
-                                    <span class="newsDate">
-                                        <i class="icon-calendar">2018.12.04</i>
-                                    </span>
-                                    <span class="newsCnt">
-                                        <i class="icon-eye">66</i>
-                                    </span>
-                                </p>
-                            </div>
+                            <a href="">
+                                <div class="col4">
+                                    <img src="./img/news_notice_01.jpg" alt="사이트리뉴얼오픈" class="thumbNail">
+                                </div>
+                                <div class="col8">
+                                    <h2 class="newsTitle">[서울/SRC병원 부설의원] SRC병원 부설의원 리뉴얼 오픈</h2>
+                                    <p class="newsComent">
+                                        <span class="newsDate">
+                                            <i class="icon-calendar">2018.12.04</i>
+                                        </span>
+                                        <span class="newsCnt">
+                                            <i class="icon-eye">66</i>
+                                        </span>
+                                    </p>
+                                </div>
+                            </a>       
                         </li>
                         <li class="item2">
-                            <div class="col4">
-                                <img src="./img/news_notice_02.jpg" alt="제휴할인" class="thumbNail">
-                            </div>
-                            <div class="col8">
-                                <h2 class="newsTitle">[서울/SRC병원 부설의원] 이디야커피 제휴 할인</h2>
-                                <p class="newsComent">
-                                    <span class="newsDate">
-                                        <i class="icon-calendar">2018.12.04</i>
-                                    </span>
-                                    <span class="newsCnt">
-                                        <i class="icon-eye">43</i>
-                                    </span>
-                                </p>
-                            </div>
+                           <a href="">
+                                <div class="col4">
+                                    <img src="./img/news_notice_02.jpg" alt="제휴할인" class="thumbNail">
+                                </div>
+                                <div class="col8">
+                                    <h2 class="newsTitle">[서울/SRC병원 부설의원] 이디야커피 제휴 할인</h2>
+                                    <p class="newsComent">
+                                        <span class="newsDate">
+                                            <i class="icon-calendar">2018.12.04</i>
+                                        </span>
+                                        <span class="newsCnt">
+                                            <i class="icon-eye">43</i>
+                                        </span>
+                                    </p>
+                                </div>
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -397,20 +401,22 @@ $(function(){
                     </form>
                     <ul class="newsLst">
                         <li class="item1">
-                            <div class="col4">
-                                <img src="./img/news_info_01.jpg" alt="팟캐스트명수다" class="thumbNail">
-                            </div>
-                            <div class="col8">
-                                <h2 class="newsTitle">[광주/SRC병원] 팟캐스트 '명수다'에 최정화 진료과장...</h2>
-                                <p class="newsComent">
-                                    <span class="newsDate">
-                                        <i class="icon-calendar">2018.12.04</i>
-                                    </span>
-                                    <span class="newsCnt">
-                                        <i class="icon-eye">21</i>
-                                    </span>
-                                </p>
-                            </div>
+                            <a href="">
+                                <div class="col4">
+                                    <img src="./img/news_info_01.jpg" alt="팟캐스트명수다" class="thumbNail">
+                                </div>
+                                <div class="col8">
+                                    <h2 class="newsTitle">[광주/SRC병원] 팟캐스트 '명수다'에 최정화 진료과장...</h2>
+                                    <p class="newsComent">
+                                        <span class="newsDate">
+                                            <i class="icon-calendar">2018.12.04</i>
+                                        </span>
+                                        <span class="newsCnt">
+                                            <i class="icon-eye">21</i>
+                                        </span>
+                                    </p>
+                                </div>
+                            </a>       
                         </li>
                     </ul>
                 </div>
