--- a/c1/joinForm.html
+++ b/c1/joinForm.html
@@ -2,10 +2,10 @@
     @session_start();
 ?>
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>SRC 병원에 오신 것을 환영합니다.</title>
+	<meta charset="utf-8" />
+	<title>회원가입 폼</title>
     <!-- 구형 브라우저 -->
     <link rel="shortcut icon" type="image/x-icon" href="./ico/favicon16.ico">
     <!-- 신형 브라우저와 안드로이드 폰 -->
@@ -42,13 +42,18 @@
     <link href="https://fonts.googleapis.com/css?family=Jua|Noto+Sans+KR|Noto+Serif+KR" rel="stylesheet">
     <link rel="stylesheet" href="com.css">
     <link rel="stylesheet" href="grid.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="sub.css">
+    <link rel="stylesheet" href="sub1.css">
+	<link rel="stylesheet" href="form.css">
     <style>
     body, html { -ms-overflow-style:none; }
     ::-webkit-scrollbar { display:none; }    
     ::-o-scrollbar { display:none; } 
     ::-moz-scrollbar { display:none; }     
     </style>
+	<style>
+	.frmBg1 { background:#fff; }
+	</style>
 <!--    <script src="https://code.jquery.com/jquery-latest.js"></script>-->
     <script src="./js/jquery-1.11.1.js"></script>
     
@@ -63,14 +68,6 @@
             });
             
         }
-        $(window).scroll(function(){
-            var scTop = $("body, html").scrollTop();
-            if(scTop>=100){
-                $(".hdFrame, #gnb a, .lstBtn span").addClass("on");
-            } else {
-                $(".hdFrame, #gnb a, .lstBtn span").removeClass("on");
-            }
-        });
     });    
     </script>
 <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script> 
@@ -108,9 +105,22 @@ $(function(){
 //   }, 1000); 
 });    
 </script>
+	<script>
+	function passCheck() {
+		var form = document.joinForm;
+		if(form.userpw.value != form.userpw2.value){
+			alert( "두 개의 비밀번호가 일치하지 않습니다." ); // 경고창 띄움
+			form.userpw.value = "";
+			form.userpw2.value = "";
+			form.userpw.focus();   // form 에 있는 userpw 위치로 이동
+			return;
+		}
+		form.submit();
+	}
+	</script>
 </head>
 <body onload="initialize()">
-<div class="hdFrame"></div>
+<div class="hdFrame on"></div>
 <header id="hd">
     <div class="wrap">
         <a href="index.html" class="logo">
@@ -118,173 +128,102 @@ $(function(){
         </a>
         <nav id="gnb">
             <ul>
-                <li><a href="intro.html#page1">병원안내</a></li>
-                <li><a href="physical.html#page1">재활치료</a></li>
-                <li><a href="ward.html#page1">병동안내</a></li>
-                <li><a href="news.html#page1">병원소식</a></li>
-                <li><a href="speech.html#page1">치료연계안내</a></li>
+                <li><a href="intro.html#page1" class="on">병원안내</a></li>
+                <li><a href="physical.html#page1" class="on">재활치료</a></li>
+                <li><a href="ward.html#page1" class="on">병동안내</a></li>
+                <li><a href="news.html#page1" class="on">병원소식</a></li>
+                <li><a href="speech.html#page1" class="on">치료연계안내</a></li>
             </ul>
         </nav>
         <label for="ck" class="lstBtn">
-            <span class="item1"></span>
-            <span class="item2"></span>
-            <span class="item3"></span>
-            <span class="item4"></span>
+            <span class="item1 on"></span>
+            <span class="item2 on"></span>
+            <span class="item3 on"></span>
+            <span class="item4 on"></span>
         </label>
     </div>
 </header>    
 <main id="content">
-    <figure id="vs">
-        <input type="radio" name="raItem" id="ra1" checked>
-        <input type="radio" name="raItem" id="ra2">
-        <ul class="banBox">
+    <div class="blank"></div>
+<div class="frmBox" style="min-height:1100px">
+    <h1 class="frmTitle">회원가입</h1>
+    <form method="post" action="member_ok.php" class="frm" name="joinForm">
+        <ul class="frmFrame joinFrm">
             <li>
-                <a href="ward.html#page1">
-                    <img src="./img/visual1.jpg" alt="병동안내 비주얼">
-                </a>
+                <div class="frmW30 frmBg1">
+                    <label for="memId" class="inLabel">아이디</label>
+                </div>
+                <div class="frmW70 frmBg2">
+                    <input type="text" size="35" name="userid" placeholder="아이디" class="inData" id="memId" required>
+                </div>
             </li>
             <li>
-                <a href="physical.html#page1">
-                    <img src="./img/visual2.jpg" alt="도수치료 비주얼">
-                </a>
+                <div class="frmW30 frmBg1">
+                    <label for="memPw" class="inLabel">비밀번호</label>
+                </div>
+                <div class="frmW70 frmBg2">
+                    <input type="password" size="35" name="userpw" placeholder="비밀번호 입력" class="inData" id="memPw" required>
+                </div>
+            </li>
+            <li>
+                <div class="frmW30 frmBg1">
+                    <label for="memPw2" class="inLabel">비밀번호 확인</label>
+                </div>
+                <div class="frmW70 frmBg2">
+                    <input type="password" size="35" name="userpw2" placeholder="비밀번호 재입력" class="inData" id="memPw2" required>
+                </div>
+            </li>
+            <li>
+                <div class="frmW30 frmBg1">
+                    <label for="memName" class="inLabel">이름</label>
+                </div>
+                <div class="frmW70 frmBg2">
+                    <input type="text" size="35" name="name" placeholder="이름 입력" class="inData" id="memName" required>
+                </div>
+            </li>
+            <li>
+                <div class="frmW30 frmBg1">
+                    <label for="memAddress" class="inLabel">주소</label>
+                </div>
+                <div class="frmW70 frmBg2">
+                    <input type="text" size="35" name="adress" placeholder="주소 입력" class="inData" id="memAddress" required>
+                </div>
+            </li>
+            <li>
+                <div class="frmW30 frmBg1">
+                    <lable for="inRa1" class="inLabel">성별</lable>
+                </div>
+                <div class="frmW70 frmBg3 pd55">
+                    <input type="radio" name="sex" value="남" class="inRa" id="inRa1" checked> 
+                    <label for="inRa1" class="inRaLabel">남</label>
+                    <input type="radio" name="sex" value="여" class="inRa" id="inRa2">
+                    <label for="inRa2" class="inRaLabel">여</label>
+                </div>
+            </li>
+            <li>
+                <div class="frmW30 frmBg1">
+                    <label for="memEmail" class="inLabel">이메일</label>
+                </div>
+                <div class="frmW70 frmBg2">
+                    <input type="text" name="email" id="memEmail1" class="inData2" required>
+                    <span class="frmSep">@</span>
+                    <select name="emadress" id="memEmail2" class="selData">
+                        <option value="naver.com">naver.com</option><option value="nate.com">nate.com</option>
+                        <option value="hanmail.com">hanmail.com</option>
+                    </select>
+                </div>
+            </li>
+            <li style="padding-top:60px;">
+                <div class="frmHalf">
+                    <input type="button" value="가입하기" class="inData btn2" onclick="passCheck()" />   
+                </div>
+                <div class="frmHalf">
+                    <input type="reset" value="다시쓰기" class="inData btn2"/>    
+                </div>    
             </li>
         </ul>
-        <ul class="btnBox">
-            <li>
-                <label for="ra1" class="vsbtn active"></label>
-            </li>
-            <li>
-                <label for="ra2" class="vsbtn"></label>
-            </li>
-        </ul>
-    </figure>
-    <div class="page" id="page1">
-        <aside class="page1_side">
-            <h1 class="pageTitle">SRC</h1>
-            <p class="pageComent">관악구 내 유일한 SRC병원 부설의원 
-소아 낮병동만의 장점을 소개합니다.</p>
-            <a href="ward.html#page1" class="detail">
-                <span class="hvTxt"></span>
-                <span>소아 낮병동 바로가기</span>
-            </a>
-        </aside>
-        <div class="banBox2">
-            <ul class="imgBox">
-                <li class="item1">
-                    <h1 class="num">01</h1>
-                    <h2 class="banTitle">소아 중심 독립적 치료실</h2>
-                    <img src="./img/img_benefit01.jpg" alt="소아병동 썸네일">
-                </li>
-                <li class="item2">
-                    <h1 class="num">02</h1>
-                    <h2 class="banTitle">소아 전담 치료진</h2>
-                    <img src="./img/img_benefit02.jpg" alt="소아 전담 썸네일">
-                </li>
-                <li class="item3">
-                    <h1 class="num">03</h1>
-                    <h2 class="banTitle">쾌적하고 위생적인 입원환경</h2>
-                    <img src="./img/img_benefit03.jpg" alt="입원환경 썸네일">
-                </li>
-                <li class="item4">
-                    <h1 class="num">04</h1>
-                    <h2 class="banTitle">ALL IN ONE SERVIES</h2>
-                    <img src="./img/img_benefit04.jpg" alt="원서비스 썸네일">
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div class="page" id="page2">
-        <div class="wrap">
-            <h1 class="pageTitle">
-                <span class="txt1">재활</span> 프로그램
-            </h1>
-            <p class="pageComent">SRC병원의 65년 재활전문의료 노하우로 최선을 다하겠습니다.</p>
-            <ul class="lst">
-                <li>
-                    <a href="physical.html#page1">
-                        <img src="./img/img_remedial01.png" alt="소아재활 썸네일">
-                    </a>
-                    <span class="itemTitle">소아재활</span>
-                </li>
-                <li>
-                    <a href="physical.html#page2">
-                        <img src="./img/img_remedial02.png" alt="청소년재활 썸네일">
-                    </a>
-                    <span class="itemTitle">청소년재활</span>
-                </li>
-                <li>
-                    <a href="physical.html#page3">
-                        <img src="./img/img_remedial03.png" alt="성인재활 썸네일">
-                    </a>
-                    <span class="itemTitle">성인재활</span>
-                </li>
-                <li>
-                    <a href="physical.html#page4">
-                        <img src="./img/img_remedial04.png" alt="감각치료 썸네일">
-                    </a>
-                    <span class="itemTitle">감각치료</span>
-                </li>
-                <li>
-                    <a href="physical.html#page5">
-                        <img src="./img/img_remedial05.png" alt="언어치료 썸네일">
-                    </a>
-                    <span class="itemTitle">언어치료</span>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div class="page" id="page3">
-        <div class="wrap">
-            <ul>
-                <li class="col12 first item1">
-                    <a href="news.html#page1" class="box">   
-                        <h3 class="nTitle">NOTICE</h3>
-                        <h2 class="pTitle">[서울/SRC병원 부설의원] SRC병원 부설의원 리뉴얼 오픈</h2>
-                        <p class="pContent">새로운 공간에서 수준 높은 재활의학을 선보입니다. 1. 독일에서 도수치료를 수료한 이영상 '과장' 2. 소아 낮병동 운영 3. 성인/소아 재활외래 4. 서울센터내의 언어심리상담센터/스포츠센터 연계 </p>
-                        <p class="nDate">2018-11-27</p>
-                    </a> 
-                    <a href="news.html#page1" class="box abs" style="padding:0px">
-                        <img src="./img/thumb_mg1_635x390.jpg" class="thumnail" alt="SRC병원 부설의원 리뉴얼 오픈 썸네일">
-                    </a>   
-                </li>
-                <li class="col6 first item2">
-                    <a href="news.html#page2" class="box">
-                        <h3 class="nTitle">NEWLETTER</h3>
-                        <h2 class="pTitle">SRC News Letter.21호(2018년 12월 발행)</h2>
-                        <p class="nDate">2018-12-30</p>
-                    </a>       
-                </li>
-                <li class="col6 item3">
-                    <a href="news.html#page3" class="box">
-                        <h3 class="nTitle">INFORMATION</h3>
-                        <h2 class="pTitle">[광주/SRC병원] 팟캐스트 '명수다'에 최정화 진료과장님 출연</h2>
-                        <p class="nDate">2018-12-04</p>
-                    </a>       
-                </li>
-            </ul>
-        </div>
-    </div>   
-    <div class="page" id="page4">
-        <div class="wrap">
-            <ul>
-                <li class="col4 first">
-                    <a href="https://blog.naver.com/srcdream" class="item1">
-                        <p class="com">SRC병원 <br>네이버블로그 바로가기</p>
-                    </a>
-                </li>
-                <li class="col4">
-                    <a href="https://www.facebook.com/srcgivedreams/" class="item2">
-                        <p class="com">SRC병원 <br> 페이스북 바로가기</p>
-                    </a>
-                </li>
-                <li class="col4">
-                    <a href="https://www.youtube.com/channel/UCNj73RbM-is0pqoqvHc-ysA" class="item3">
-                        <p class="com">SRC병원 <br> 유튜브 바로가기</p>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
+    </form>
+</div>
     <div class="page" id="lastPage">
         <div class="wrap">
             <ul>
@@ -472,7 +411,7 @@ $(function(){
             <li>
                 <a href="speech.html#page2" class="cyan">스포츠센터</a>
             </li>
-            <li><a href="#" class="toTop">위로</a></li>
+            <li><a href="#page1" class="toTop">위로</a></li>
         </ul>
     </div>
 </aside>
