--- a/c1/loginForm.html
+++ b/c1/loginForm.html
@@ -2,10 +2,10 @@
     @session_start();
 ?>
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>SRC 병원에 오신 것을 환영합니다.</title>
+	<meta charset="utf-8" />
+	<title>회원가입 및 로그인 사이트</title>
     <!-- 구형 브라우저 -->
     <link rel="shortcut icon" type="image/x-icon" href="./ico/favicon16.ico">
     <!-- 신형 브라우저와 안드로이드 폰 -->
@@ -42,7 +42,9 @@
     <link href="https://fonts.googleapis.com/css?family=Jua|Noto+Sans+KR|Noto+Serif+KR" rel="stylesheet">
     <link rel="stylesheet" href="com.css">
     <link rel="stylesheet" href="grid.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="sub.css">
+    <link rel="stylesheet" href="sub1.css">
+    <link rel="stylesheet" type="text/css" href="form.css" />
     <style>
     body, html { -ms-overflow-style:none; }
     ::-webkit-scrollbar { display:none; }    
@@ -63,14 +65,6 @@
             });
             
         }
-        $(window).scroll(function(){
-            var scTop = $("body, html").scrollTop();
-            if(scTop>=100){
-                $(".hdFrame, #gnb a, .lstBtn span").addClass("on");
-            } else {
-                $(".hdFrame, #gnb a, .lstBtn span").removeClass("on");
-            }
-        });
     });    
     </script>
 <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script> 
@@ -110,7 +104,6 @@ $(function(){
 </script>
 </head>
 <body onload="initialize()">
-<div class="hdFrame"></div>
 <header id="hd">
     <div class="wrap">
         <a href="index.html" class="logo">
@@ -118,172 +111,47 @@ $(function(){
         </a>
         <nav id="gnb">
             <ul>
-                <li><a href="intro.html#page1">병원안내</a></li>
-                <li><a href="physical.html#page1">재활치료</a></li>
-                <li><a href="ward.html#page1">병동안내</a></li>
-                <li><a href="news.html#page1">병원소식</a></li>
-                <li><a href="speech.html#page1">치료연계안내</a></li>
+                <li><a href="intro.html#page1" class="on">병원안내</a></li>
+                <li><a href="physical.html#page1" class="on">재활치료</a></li>
+                <li><a href="ward.html#page1" class="on">병동안내</a></li>
+                <li><a href="news.html#page1" class="on">병원소식</a></li>
+                <li><a href="speech.html#page1" class="on">치료연계안내</a></li>
             </ul>
         </nav>
         <label for="ck" class="lstBtn">
-            <span class="item1"></span>
-            <span class="item2"></span>
-            <span class="item3"></span>
-            <span class="item4"></span>
+            <span class="item1 on"></span>
+            <span class="item2 on"></span>
+            <span class="item3 on"></span>
+            <span class="item4 on"></span>
         </label>
     </div>
 </header>    
 <main id="content">
-    <figure id="vs">
-        <input type="radio" name="raItem" id="ra1" checked>
-        <input type="radio" name="raItem" id="ra2">
-        <ul class="banBox">
-            <li>
-                <a href="ward.html#page1">
-                    <img src="./img/visual1.jpg" alt="병동안내 비주얼">
-                </a>
-            </li>
-            <li>
-                <a href="physical.html#page1">
-                    <img src="./img/visual2.jpg" alt="도수치료 비주얼">
-                </a>
-            </li>
-        </ul>
-        <ul class="btnBox">
-            <li>
-                <label for="ra1" class="vsbtn active"></label>
-            </li>
-            <li>
-                <label for="ra2" class="vsbtn"></label>
-            </li>
-        </ul>
-    </figure>
-    <div class="page" id="page1">
-        <aside class="page1_side">
-            <h1 class="pageTitle">SRC</h1>
-            <p class="pageComent">관악구 내 유일한 SRC병원 부설의원 
-소아 낮병동만의 장점을 소개합니다.</p>
-            <a href="ward.html#page1" class="detail">
-                <span class="hvTxt"></span>
-                <span>소아 낮병동 바로가기</span>
-            </a>
-        </aside>
-        <div class="banBox2">
-            <ul class="imgBox">
-                <li class="item1">
-                    <h1 class="num">01</h1>
-                    <h2 class="banTitle">소아 중심 독립적 치료실</h2>
-                    <img src="./img/img_benefit01.jpg" alt="소아병동 썸네일">
+    <div class="blank"></div>
+	<div class="frmBox" style="min-height:500px">
+		<h1 class="frmTitle">로그인</h1>							
+        <form method="post" action="login_ok.php" class="frm">
+            <ul class="frmFrame loginFrm">
+                <li>
+                    <div class="frmHalf"> 
+                        <input type="text" name="userid" class="inData" placeholder="아이디 입력" required autofocus>
+                    </div>
+                    <div class="frmHalf"> 
+                        <button type="submit" class="inData btn" >로그인</button>
+                    </div>
                 </li>
-                <li class="item2">
-                    <h1 class="num">02</h1>
-                    <h2 class="banTitle">소아 전담 치료진</h2>
-                    <img src="./img/img_benefit02.jpg" alt="소아 전담 썸네일">
+                <li>
+                    <div class="frmHalf"> 
+                        <input type="password" name="userpw"  class="inData" placeholder="비밀번호 입력" required>
+                    </div>
                 </li>
-                <li class="item3">
-                    <h1 class="num">03</h1>
-                    <h2 class="banTitle">쾌적하고 위생적인 입원환경</h2>
-                    <img src="./img/img_benefit03.jpg" alt="입원환경 썸네일">
-                </li>
-                <li class="item4">
-                    <h1 class="num">04</h1>
-                    <h2 class="banTitle">ALL IN ONE SERVIES</h2>
-                    <img src="./img/img_benefit04.jpg" alt="원서비스 썸네일">
+                <li>
+                    <div class="frmFull"> 
+                        <a href="joinForm.html" class="frmLnk">회원가입 하시겠습니까?</a>
+                    </div>
                 </li>
             </ul>
-        </div>
-    </div>
-    <div class="page" id="page2">
-        <div class="wrap">
-            <h1 class="pageTitle">
-                <span class="txt1">재활</span> 프로그램
-            </h1>
-            <p class="pageComent">SRC병원의 65년 재활전문의료 노하우로 최선을 다하겠습니다.</p>
-            <ul class="lst">
-                <li>
-                    <a href="physical.html#page1">
-                        <img src="./img/img_remedial01.png" alt="소아재활 썸네일">
-                    </a>
-                    <span class="itemTitle">소아재활</span>
-                </li>
-                <li>
-                    <a href="physical.html#page2">
-                        <img src="./img/img_remedial02.png" alt="청소년재활 썸네일">
-                    </a>
-                    <span class="itemTitle">청소년재활</span>
-                </li>
-                <li>
-                    <a href="physical.html#page3">
-                        <img src="./img/img_remedial03.png" alt="성인재활 썸네일">
-                    </a>
-                    <span class="itemTitle">성인재활</span>
-                </li>
-                <li>
-                    <a href="physical.html#page4">
-                        <img src="./img/img_remedial04.png" alt="감각치료 썸네일">
-                    </a>
-                    <span class="itemTitle">감각치료</span>
-                </li>
-                <li>
-                    <a href="physical.html#page5">
-                        <img src="./img/img_remedial05.png" alt="언어치료 썸네일">
-                    </a>
-                    <span class="itemTitle">언어치료</span>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div class="page" id="page3">
-        <div class="wrap">
-            <ul>
-                <li class="col12 first item1">
-                    <a href="news.html#page1" class="box">   
-                        <h3 class="nTitle">NOTICE</h3>
-                        <h2 class="pTitle">[서울/SRC병원 부설의원] SRC병원 부설의원 리뉴얼 오픈</h2>
-                        <p class="pContent">새로운 공간에서 수준 높은 재활의학을 선보입니다. 1. 독일에서 도수치료를 수료한 이영상 '과장' 2. 소아 낮병동 운영 3. 성인/소아 재활외래 4. 서울센터내의 언어심리상담센터/스포츠센터 연계 </p>
-                        <p class="nDate">2018-11-27</p>
-                    </a> 
-                    <a href="news.html#page1" class="box abs" style="padding:0px">
-                        <img src="./img/thumb_mg1_635x390.jpg" class="thumnail" alt="SRC병원 부설의원 리뉴얼 오픈 썸네일">
-                    </a>   
-                </li>
-                <li class="col6 first item2">
-                    <a href="news.html#page2" class="box">
-                        <h3 class="nTitle">NEWLETTER</h3>
-                        <h2 class="pTitle">SRC News Letter.21호(2018년 12월 발행)</h2>
-                        <p class="nDate">2018-12-30</p>
-                    </a>       
-                </li>
-                <li class="col6 item3">
-                    <a href="news.html#page3" class="box">
-                        <h3 class="nTitle">INFORMATION</h3>
-                        <h2 class="pTitle">[광주/SRC병원] 팟캐스트 '명수다'에 최정화 진료과장님 출연</h2>
-                        <p class="nDate">2018-12-04</p>
-                    </a>       
-                </li>
-            </ul>
-        </div>
-    </div>   
-    <div class="page" id="page4">
-        <div class="wrap">
-            <ul>
-                <li class="col4 first">
-                    <a href="https://blog.naver.com/srcdream" class="item1">
-                        <p class="com">SRC병원 <br>네이버블로그 바로가기</p>
-                    </a>
-                </li>
-                <li class="col4">
-                    <a href="https://www.facebook.com/srcgivedreams/" class="item2">
-                        <p class="com">SRC병원 <br> 페이스북 바로가기</p>
-                    </a>
-                </li>
-                <li class="col4">
-                    <a href="https://www.youtube.com/channel/UCNj73RbM-is0pqoqvHc-ysA" class="item3">
-                        <p class="com">SRC병원 <br> 유튜브 바로가기</p>
-                    </a>
-                </li>
-            </ul>
-        </div>
+        </form>
     </div>
     <div class="page" id="lastPage">
         <div class="wrap">
@@ -472,7 +340,7 @@ $(function(){
             <li>
                 <a href="speech.html#page2" class="cyan">스포츠센터</a>
             </li>
-            <li><a href="#" class="toTop">위로</a></li>
+            <li><a href="#page1" class="toTop">위로</a></li>
         </ul>
     </div>
 </aside>
