--- a/m7/index.html
+++ b/m7/index.html
@@ -28,9 +28,9 @@
     <!-- 검색엔진에서 검색되게할 키워드 -->
     <meta name="keywords" content="강아지, 애완견, 사냥견, dog">
     
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
+    <script src="https://code.jquery.com/jquery-latest.js"></script>
+    <script src="https://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
     <style>
     #main { background-image:url("./img/dog1.jpg"); background-size:cover; background-color:transparent; width:100%; height:calc(100% - 120px); 
         overflow:hidden; background-position:center center; } 
