html file editing
웹 문서 링크 수정

--- a/b5/about1.html
+++ b/b5/about1.html
@@ -154,9 +154,9 @@
             </div>
             <nav id="fnb">
                 <ul>
-                    <li><a href=""><strong>개인정보처리방침</strong></a></li>
-                    <li><a href="">이용약관</a></li>
-                    <li><a href="">법적고지</a></li>
+                    <li><a href="privacy.html"><strong>개인정보처리방침</strong></a></li>
+                    <li><a href="terms.html">이용약관</a></li>
+                    <li><a href="regal.html">법적고지</a></li>
                 </ul>
             </nav>
             <div class="addr">
